# cubo

./: .gitignore  CITATION.bib  LICENSE  README.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: publish.yml  tests.yml
cubo/: __init__.py  cubo.py  earthengine.py  utils.py
docs/: changelog.rst  conf.py  index.rst  reference.rst  tutorials.rst
docs/stubs/: cubo.cubo.create.rst
docs/tutorials/: cube_visualization.ipynb  edge_size_units.ipynb  getting_started.ipynb  stackstac.ipynb  using_collections.ipynb  using_gee.ipynb  visualization_lexcube.ipynb
tests/: test_cubo.py
