[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cubo"
version = "2024.8.0"
description = "On-Demand Earth System Data Cubes in Python"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "David Montero Loaiza", email = "dml.mont@gmail.com" }
]
requires-python = ">=3.10"

classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
  "dask>=2023.7.0",
  "numpy",
  "pandas>=2.0.3",
  "planetary_computer>=1.0.0",
  "pystac_client>=0.7.2",
  "scipy>=1.12.0",
  "stackstac>=0.5.1",
  "xarray>=2023.6.0",
]

[project.optional-dependencies]
ee = ["xee>=0.0.6"]

[project.urls]
"Bug Tracker"= "https://github.com/ESDS-Leipzig/cubo/issues"
Documentation =  "https://cubo.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/ESDS-Leipzig/cubo"
Homepage = "https://github.com/ESDS-Leipzig/cubo"

# Compatibility between black and isort
[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
"cubo.data" = ["*.json"]
